--- a/org/Tutorial.org
+++ b/org/Tutorial.org
@@ -2815,36 +2815,41 @@
         #+END_SRC
 **** Third nest
 ***** Body
-      #+NAME: boast-nest3-body
+      In this nest every expressions, group of expression have been
+      store into variables, same for the loops as we envision the
+      possibility to reorder the loops as we think it would be
+      beneficial. This way loops and expressions can be reused and
+      eases the reordering. However this feature is not implemented
+      yet and the order follows the reference implementation one. 
+      #+NAME: boast-nest3-body-expressions
       #+BEGIN_SRC ruby
         for_inode = For(inode,1,@pnode)
         for_jnode = For(jnode,1,@pnode)
         for_idime = For(idime,1,@ndime)
         for_jdime = lambda{ |dim| return For(jdime,1,dim) }
 
-        block1 = lambda{
-          pr fact[2] === @gpvis[igaus] * @gpvol[igaus] * @gpcar[idime,jnode,igaus]
-        }
+        exp_fact1 = fact[2] === @gpvis[igaus] * @gpvol[igaus] * @gpcar[idime,jnode,igaus]
+        exp_idofv = idofv === (inode-1)*@ndime + idime
 
-        block2 = lambda{
-          pr idofv === (inode-1)*@ndime + idime
-        }
-
-        block3 = lambda{
+        block_elauu_1 = lambda{
           pr jdofv === (jnode-1)*@ndime + jdime
           pr @elauu[idofv,jdofv] === @elauu[idofv,jdofv] + fact[2] * @gpcar[jdime,inode,igaus]
         }
 
-        block4 = lambda{
-          pr fact[2] === -2.0.to_var / 3.0.to_var * @gpvis[igaus] * @gpvol[igaus] * @gpcar[idime,inode,igaus]
-        }
+        exp_fact1_2 = fact[2] === -2.0.to_var / 3.0.to_var * @gpvis[igaus] * @gpvol[igaus] * @gpcar[idime,inode,igaus]
 
-        block5 = lambda{
+        block_elauu_2 = lambda{
           pr jdofv === (jnode-1)*@ndime + jdime
           pr @elauu[idofv,jdofv] === @elauu[idofv,jdofv] + fact[2] * @gpcar[jdime,jnode,igaus]
         }
-
-
+      #+END_SRC
+      
+      Same principle is in [[boast-nest1-body][<<boast-nest1-body>>]] the code can be
+      unrolled for values =ndime= 2 and 3 or not. We previously defined
+      empty, their content can be simply filled by opening it with =opn=
+      print expression as usual end closing it with =close=.
+      #+NAME: boast-nest3-body-loops
+      #+BEGIN_SRC ruby
         main_block = lambda{ 
           decl igaus,idime,jdime,inode,jnode,fact,idofv,jdofv unless @usage == :included
 
@@ -2854,27 +2859,27 @@
               for1[for1.length] = For(igaus,1,@pgaus){ 
 
                 opn for_inode
-                opn for_idime
-                block2.call
-                opn for_jnode
-                block1.call
-                if @unroll then
-                  pr for_jdime.call(dim).unroll, &block3
-                else
-                  pr for_jdime.call(dim), &block3
-                end
-                close for_jnode
-                pr If(@fvins_nsi == 2.0){
-                  block4.call
-                  opn for_jnode
-                  if @unroll then
-                    pr for_jdime.call(dim).unroll, &block5
-                  else
-                    pr for_jdime.call(dim), &block5
-                  end
-                  close for_jnode
-                }
-                close for_idime
+                  opn for_idime
+                    pr exp_idofv
+                    opn for_jnode
+                      pr exp_fact1
+                      if@unroll then
+                        pr for_jdime.call(dim).unroll, &block_elauu_1
+                      else
+                        pr for_jdime.call(dim), &block_elauu_1
+                      end
+                    close for_jnode
+                    pr If(@fvins_nsi == 2.0){
+                      pr exp_fact1_2
+                      opn for_jnode
+                        if @unroll then
+                          pr for_jdime.call(dim).unroll, &block_elauu_2
+                        else
+                          pr for_jdime.call(dim), &block_elauu_2
+                        end
+                      close for_jnode
+                    }
+                  close for_idime
                 close for_inode
               }
             }
@@ -2889,8 +2894,7 @@
               pr for1[0]
             end
           }
-        }
-              
+        }              
       #+END_SRC
 ***** Class                                                       :Technical:
       Same principle as in [[boast-nest1-class][<<boast-nest1-class>>]]
@@ -2925,7 +2929,9 @@
               idofv = $idofv
               jdofv = $jdofv
               
-              <<boast-nest3-body>>
+              <<boast-nest3-body-expressions>>
+
+              <<boast-nest3-body-loops>>
 
               construct(main_block)
             end
